fix alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -249,6 +249,7 @@
       font-size: 20px;
       margin-left: 30px;
       margin-right: 30px;
+      text-align: left;
     }
 
 
